<resources>
    <string name="app_name" translatable="false">MyApp</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="action_settings">Language</string>
    <string name="action_favorite">favorite</string>
    <string name="title_email" translatable="false">Email</string>
    <string name="title_call" translatable="false">Call</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="send_email">Send Email</string>
    <string name="email_address_validation">email address is not valid or subject is empty</string>
    <string name="address_email_field">input email address</string>
    <string name="subject_email_field">enter subject</string>
    <string name="text_email_field">write your email</string>
    <string name="error_message">something went wrong</string>
    <string name="mom">mom</string>
    <string name="dad">dad</string>
    <string name="snackBar_callAnyway">call anyway</string>
    <string name="title_diary">Diary</string>
    <string name="title_diaryDay">diaryDay</string>
    <string name="title_diaryDayDescription">Day Description</string>
    <string name="add_Diary_Item">add</string>
    <string name="enter_diary_date"><u>enter diary date</u></string>
    <string name="enter_diary_description"><u>enter diary description</u></string>
    <string name="email_was_sent">email was sent</string>
    <string name="new_email_notification">you have new email from: </string>
    <string name="get_email">Get Email</string>
    <string name="bother_parrents">do you really want to bother them?</string>
    <string name="update_Diary_Item">update</string>
    <string name="delete_Diary_Item">delete</string>
    <string name="reallyUpdate">update?</string>
    <string name="Yes">Yes</string>
    <string name="reallyDelete">Delete?</string>
    <string name="go_to_emailBox">....GO TO YOUR EMAIL BOX TO SEE THE REST</string>
    <string name="sign_in">Sign in</string>
    <string name="SignInCancled">signing in was cancled</string>
    <string name="sing_out">Sign out</string>
    <string name="welcome">welcome to flash communication app</string>
    <string name="welcomeMessage">Welcome</string>
</resources>