<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eceff1"
    android:textAlignment="textStart"
    app:layout_constraintBottom_toTopOf="parent"
    tools:context="com.example.myApplication.View.Diary.DiaryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardview_light_background" />
        </ScrollView>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"

            app:layout_constraintBottom_toTopOf="@+id/linearLayout4">

            <EditText
                android:id="@+id/newDiaryDate"
                style="@style/diaryStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:hint="@string/enter_diary_date"
               />

            <EditText
                android:id="@+id/newDiaryDescription"
                style="@style/diaryStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/enter_diary_description"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"

                android:gravity= "bottom" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/addDiaryItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_Diary_Item"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />
            <Button
                android:id="@+id/updateDiaryItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_Diary_Item"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />
            <Button
                android:id="@+id/deleteDiaryItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_Diary_Item"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>