<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eceff1"

    tools:context="com.example.myApplication.View.Email.EmailFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <com.google.android.material.floatingactionbutton.FloatingActionButton

            android:id="@+id/getEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:scaleType="fitCenter"

            android:src="@drawable/ic_baseline_arrow_downward"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/emailNotification"
            style="@style/emailStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:textColor="@color/colorRed"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/emailAdd"
            style="@style/emailStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@android:color/holo_blue_light"
            android:ems="10"
            android:hint="@string/address_email_field"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailNotification" />

        <EditText
            android:id="@+id/emailSubject"
            style="@style/emailStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@android:color/holo_blue_light"
            android:ems="10"
            android:hint="@string/subject_email_field"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailAdd" />

        <EditText
            android:id="@+id/textOfEmail"
            style="@style/emailStyle"
            android:layout_width="match_parent"
            android:layout_height="297dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/holo_green_light"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/text_email_field"

            android:inputType="textMultiLine"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            app:layout_constraintTop_toBottomOf="@+id/emailSubject" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton

            android:id="@+id/sendEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:layout_marginStart="36dp"
            android:contentDescription="@string/send_email"
            android:scaleType="fitCenter"
            android:src="@android:drawable/ic_dialog_email"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textOfEmail"

            />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/emailSubject"
            app:layout_constraintTop_toBottomOf="@+id/getEmail" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>